added loading... text

--- a/findeddie/index.html
+++ b/findeddie/index.html
@@ -7,7 +7,7 @@
 	<link rel="stylesheet" href="styles.css">
 </head>
 <body>
-	<p id='top'>Find Eddie</p>
+	<p id='top'>Loading...</p>
 	<div id='imgCont'><img></div>
 	<p id='bottom'></p>
 </body>
