--- a/home/index.html
+++ b/home/index.html
@@ -9,9 +9,9 @@
     <link rel="icon" href="./favicon.ico" type="image/x-icon">
   </head>
   <body>
-    <p>Eddie Kim — Next Level Coding Fall 2022 Talia Cotton</p> 
+    <p>Eddie Kim — Next Level Coding <wbr>Fall 2022 <wbr>Talia Cotton</p> 
     <p>&emsp;<a href='https://eddiedohyunkim.github.io/nlc/findeddie/' target="_blank">Project 1: You show-off!<a></p>
     <p>&emsp;Project 2: Editorial Illustration</p> 
-	<script src="script.js"></script>
+	<!-- <script src="script.js"></script> -->
   </body>
 </html>
