--- a/home/index.html
+++ b/home/index.html
@@ -6,14 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Eddie Kim — NLC F22</title>
     <link rel="stylesheet" href="styles.css">
-    <link rel="icon" href="./favicon.ico" type="image/x-icon">
   </head>
-  <body>
-    <img src='assets/eddie.svg'></img>
+  <body class='change'>
+    <img class='change' src='assets/eddie.svg'></img>
     <div>
       <p>Eddie Kim — Next Level Coding <wbr>Fall 2022 <wbr>Talia Cotton</p> 
       <p>&emsp;<a href='https://eddiedohyunkim.github.io/nlc/findeddie/' target='_blank'>Project 1: You show-off!</a></p>
       <p>&emsp;<a href='https://eddiedohyunkim.github.io/nlc/slow-moving-crisis/' target='_blank'>Project 2: Editorial Illustration</a></p> 
     </div>
   </body>
+  <script src='script.js'></script>
 </html>
