document-hidden function update

--- a/home/index.html
+++ b/home/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="styles.css">
   </head>
   <body class='change'>
-    <img class='change' src='assets/eddie.svg'></img>
+    <img class='change' src='assets/eddie_color.svg'></img>
     <div>
       <p>Eddie Kim — Next Level Coding <wbr>Fall 2022 <wbr>Talia Cotton</p> 
       <p>&emsp;<a href='https://eddiedohyunkim.github.io/nlc/findeddie/' target='_blank'>Project 1: You show-off!</a></p>
