--- a/slow-moving-crisis/index.html
+++ b/slow-moving-crisis/index.html
@@ -9,8 +9,9 @@
   </head>
   <body>
     <div id='container' onclick="window.location.href='https://www.washingtonpost.com/opinions/2022/09/12/worker-shortage-public-sector-crisis/'">
-      <div id='clockface' >
-        <img id='usgov' src='assets/usgov_logo_2.svg'>
+      <div id='clockface'>
+        <img id='usgov' src='assets/usgov_logo.svg'>
+        <p id='digitalClock'></p>
         <span class='numbers' id='n0'>U</span>
         <span class='numbers' id='n1'>S</span>
         <span class='numbers' id='n2'>G</span>
@@ -24,11 +25,11 @@
         <span class='numbers' id='n10'>N</span>
         <span class='numbers' id='n11'>T</span>
       </div>
-      <div id='hourCont'>
-        <img id='redSnail' src='assets/red_snail.svg'>
-      </div>
       <div id='minCont'>
         <img id='blueSnail' src='assets/blue_snail.svg'>
+      </div>
+      <div id='hourCont'>
+        <img id='redSnail' src='assets/red_snail.svg'>
       </div>
     </div>
   </body>
