--- a/slow-moving-crisis/index.html
+++ b/slow-moving-crisis/index.html
@@ -2,34 +2,25 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0 user-scalable=no">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Slow-moving crisis</title>
+    <!-- <link rel="icon" href="data:,"> -->
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
     <div id='container' onclick="window.location.href='https://www.washingtonpost.com/opinions/2022/09/12/worker-shortage-public-sector-crisis/'">
       <div id='clockface'>
-        <img id='usgov' src='assets/usgov_logo.svg'>
-        <p id='digitalClock'></p>
-        <span class='numbers' id='n0'>U</span>
-        <span class='numbers' id='n1'>S</span>
-        <span class='numbers' id='n2'>G</span>
-        <span class='numbers' id='n3'>O</span>
-        <span class='numbers' id='n4'>V</span>
-        <span class='numbers' id='n5'>E</span>
-        <span class='numbers' id='n6'>R</span>
-        <span class='numbers' id='n7'>N</span>
-        <span class='numbers' id='n8'>M</span>
-        <span class='numbers' id='n9'>E</span>
-        <span class='numbers' id='n10'>N</span>
-        <span class='numbers' id='n11'>T</span>
+        <img id='usgov' src='assets/clockface.svg'>
       </div>
-      <div id='minCont'>
+      <div class='hands' id='minCont'>
         <img id='blueSnail' src='assets/blue_snail.svg'>
       </div>
-      <div id='hourCont'>
+      <div class='hands' id='hourCont'>
         <img id='redSnail' src='assets/red_snail.svg'>
+      </div>
+      <div class='hands' id='secCont'>
+        <img id='graySnail' src='assets/gray_snail.svg'>
       </div>
     </div>
   </body>
