<a> tag link arrow

--- a/home/index.html
+++ b/home/index.html
@@ -559,8 +559,10 @@
       <p>Eddie Kim — Next Level Coding <wbr>Fall 2022 <wbr>Talia Cotton</p> 
       <p>&emsp;<a href='https://eddiedohyunkim.github.io/nlc/findeddie/' target='_blank'>Project 1: You show-off!</a></p>
       <p>&emsp;<a href='https://eddiedohyunkim.github.io/nlc/slow-moving-crisis/' target='_blank'>Project 2: Editorial Illustration</a></p>
+      <p>&emsp;Project 3: Periodical Logo</p>
+      <p>&emsp;&emsp;<a href='https://eddiedohyunkim.github.io/nlc/periodical-logo/' target='_blank'>Logo generator</a></p>
        
-      <!-- <p><br><span id='bodyColor'></span> <span id='svgColor'></span></p> -->
+      <p><br><span id='bodyColor'></span> <span id='svgColor'></span></p>
     </div>
       
   </body>
