--- a/periodical-logo/index.html
+++ b/periodical-logo/index.html
@@ -9,15 +9,25 @@
 </head>
 <body>
 
+<div id='SVGcontainer'></div>
 <div id='big-container'>
-	<div id='SVGcontainer'></div>
+	
 	<div id='logo-container'>
 		<div class='line dataline'id='DataLine0'></div>
 		<div class='line dataline'id='DataLine1'></div>
 		<div class='line dataline'id='DataLine2'></div>
 		<div class='line dataline'id='DataLine3'></div>
 		
-		<div class= 'grid elem' id='W-grid'></div>
+		<div class= 'grid elem' id='W-grid'>
+			<div class='data Wdata'></div>
+
+			<div class='pixels Wpixels'></div>
+			<div class='pixels Wpixels'></div>
+			<div class='pixels Wpixels'></div>
+			<div class='pixels Wpixels'></div>
+			<div class='pixels Wpixels'></div>
+			<div class='pixels Wpixels'></div>
+		</div>
 			<div class='line W-line'id='WL1'></div>
 			<div class='line W-line'id='WL2'></div>
 			<div class='line W-line'id='WL3'></div>
@@ -25,7 +35,16 @@
 			<div class='line W-line'id='WL5'></div>
 		<div class= 'space elem' id='space1'></div>
 	
-		<div class= 'grid elem' id='I-grid'></div>
+		<div class= 'grid elem' id='I-grid'>
+			<div class='data Idata'></div>
+
+			<div class='pixels Ipixels'></div>
+			<div class='pixels Ipixels'></div>
+			<div class='pixels Ipixels'></div>
+			<div class='pixels Ipixels'></div>
+			<div class='pixels Ipixels'></div>
+			<div class='pixels Ipixels'></div>
+		</div>
 			<div class='line I-line'id='IL1'></div>
 			<div class='line I-line'id='IL2'></div>
 			<div class='line I-line'id='IL3'></div>
@@ -33,15 +52,34 @@
 			<div class='line I-line'id='IL5'></div>
 		<div class= 'space elem' id='space2'></div>
 	
-		<div class= 'grid elem' id='R-grid'></div>
+		<div class= 'grid elem' id='R-grid'>
+			<div class='data Rdata'></div>
+
+			<div class='pixels Rpixels'></div>
+			<div class='pixels Rpixels'></div>
+			<div class='pixels Rpixels'></div>
+			<div class='pixels Rpixels'></div>
+			<div class='pixels Rpixels'></div>
+			<div class='pixels Rpixels'></div>
+		</div>
 			<div class='line R-line'id='RL1'></div>
 			<div class='line R-line'id='RL2'></div>
 			<div class='line R-line'id='RL3'></div>
 			<div class='line R-line'id='RL4'></div>
 			<div class='line R-line'id='RL5'></div>
+			<div class='line R-line'id='RL6'></div>
 		<div class= 'space elem' id='space3'></div>
 	
-		<div class= 'grid elem' id='E-grid'></div>
+		<div class= 'grid elem' id='E-grid'>
+			<div class='data Edata'></div>
+
+			<div class='pixels Epixels'></div>
+			<div class='pixels Epixels'></div>
+			<div class='pixels Epixels'></div>
+			<div class='pixels Epixels'></div>
+			<div class='pixels Epixels'></div>
+			<div class='pixels Epixels'></div>
+		</div>
 			<div class='line E-line'id='EL1'></div>
 			<div class='line E-line'id='EL2'></div>
 			<div class='line E-line'id='EL3'></div>
@@ -49,12 +87,22 @@
 			<div class='line E-line'id='EL5'></div>
 		<div class= 'space elem' id='space4'></div>
 	
-		<div class= 'grid elem' id='D-grid'></div>
+		<div class= 'grid elem' id='D-grid'>
+			<div class='data Ddata'></div>
+
+			<div class='pixels Dpixels'></div>
+			<div class='pixels Dpixels'></div>
+			<div class='pixels Dpixels'></div>
+			<div class='pixels Dpixels'></div>
+			<div class='pixels Dpixels'></div>
+			<div class='pixels Dpixels'></div>
+		</div>
 			<div class='line D-line'id='DL1'></div>
 			<div class='line D-line'id='DL2'></div>
 			<div class='line D-line'id='DL3'></div>
 			<div class='line D-line'id='DL4'></div>
 			<div class='line D-line'id='DL5'></div>
+			<div class='line D-line'id='DL6'></div>
 	</div>
 </div>
 
