--- a/periodical-logo/index.html
+++ b/periodical-logo/index.html
@@ -13,10 +13,18 @@
 <div id='big-container'>
 	
 	<div id='logo-container'>
-		<div class='line dataline'id='DataLine0'></div>
-		<div class='line dataline'id='DataLine1'></div>
-		<div class='line dataline'id='DataLine2'></div>
-		<div class='line dataline'id='DataLine3'></div>
+		
+		<div class='dataline'id='DataLine1'></div>
+		<div class='dataline'id='DataLine2'></div>
+		<div class='dataline'id='DataLine3'></div>
+		<div class='dataline'id='DataLine5'></div>
+		<div class='dataline'id='DataLine6'></div>
+		<div class='dataline'id='DataLine8'></div>
+
+		<div class='dataline'id='DataLine0'></div>
+		<div class='dataline'id='DataLine4'></div>
+		<div class='dataline'id='DataLine7'></div>
+		<div class='dataline'id='DataLine9'></div>
 		
 		<div class= 'grid elem' id='W-grid'>
 			<div class='data Wdata'></div>
@@ -33,7 +41,6 @@
 			<div class='line W-line'id='WL3'></div>
 			<div class='line W-line'id='WL4'></div>
 			<div class='line W-line'id='WL5'></div>
-		<div class= 'space elem' id='space1'></div>
 	
 		<div class= 'grid elem' id='I-grid'>
 			<div class='data Idata'></div>
@@ -50,7 +57,6 @@
 			<div class='line I-line'id='IL3'></div>
 			<div class='line I-line'id='IL4'></div>
 			<div class='line I-line'id='IL5'></div>
-		<div class= 'space elem' id='space2'></div>
 	
 		<div class= 'grid elem' id='R-grid'>
 			<div class='data Rdata'></div>
@@ -68,7 +74,6 @@
 			<div class='line R-line'id='RL4'></div>
 			<div class='line R-line'id='RL5'></div>
 			<div class='line R-line'id='RL6'></div>
-		<div class= 'space elem' id='space3'></div>
 	
 		<div class= 'grid elem' id='E-grid'>
 			<div class='data Edata'></div>
@@ -85,7 +90,6 @@
 			<div class='line E-line'id='EL3'></div>
 			<div class='line E-line'id='EL4'></div>
 			<div class='line E-line'id='EL5'></div>
-		<div class= 'space elem' id='space4'></div>
 	
 		<div class= 'grid elem' id='D-grid'>
 			<div class='data Ddata'></div>
@@ -108,5 +112,5 @@
 
 </body>
 <script type='text/javascript' src='js/xml-formatter.js'></script>
-<script type='text/javascript' src="script.js"></script>
+<script type='text/javascript' src="script_animate.js"></script>
 </html>
