--- a/home/index.html
+++ b/home/index.html
@@ -11,13 +11,13 @@
     <div id='textCont'>
       <div id='titleCont0'></div>
       <div id='titleCont1'></div>
-      <div id='projCont0'></div>
-      <div id='projCont1'></div>
-      <div id='projCont2'></div>
-      <div id='projCont3'></div>
-      <div id='projCont4'></div>
-      <div id='projCont5'></div>
-      <div id='projCont6'></div>
+      <div class='proj' id='projCont0'></div>
+      <div class='proj' id='projCont1'></div>
+      <div class='proj' id='projCont2'></div>
+      <div class='proj' id='projCont3'></div>
+      <div class='proj' id='projCont4'></div>
+      <div class='proj' id='projCont5'></div>
+      <div class='proj' id='projCont6'></div>
     </div>
   </body>
   <script src='script.js'></script>
